plugins {
    id 'java'
    id 'jacoco'
}

group 'liteweb'
version '1.0'

sourceCompatibility = 8

repositories {
    mavenCentral()
}

tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}

dependencies {
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.3'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

test {
    useJUnitPlatform()

    jacoco {
        enabled = System.getenv("CI") == "true"
    }
}

jacocoTestReport {
    reports {
        xml.enabled true
        xml.destination file("${buildDir}/jacocoXml")
        csv.enabled false
        html.enabled false
    }
}